RESOLVED FIXED268508
[UnifiedPDF] Handle buttons with actions that do not reset forms
https://bugs.webkit.org/show_bug.cgi?id=268508
Summary [UnifiedPDF] Handle buttons with actions that do not reset forms
Sammy Gill
Reported 2024-01-31 16:01:49 PST
Certain buttons on PDFs can perform functionality like clearing forms or moving between pages.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-31 16:02:02 PST
Sammy Gill
Comment 2 2024-02-09 17:13:44 PST
Refocused this bugzilla to handle actions that do not reset forms which will be done in a separate patch
Sammy Gill
Comment 3 2024-02-09 18:01:31 PST
EWS
Comment 4 2024-02-13 18:31:13 PST
Committed 274598@main (f3ce152618e8): <https://commits.webkit.org/274598@main> Reviewed commits have been landed. Closing PR #24196 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.